--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -27,9 +27,14 @@ project("il2cpp_trace_module")
 
 include_directories(
         xdl/include
+        capstone/include
 )
 
 aux_source_directory(xdl xdl-src)
+
+add_library(capstone_lib STATIC IMPORTED)
+set_target_properties(capstone_lib PROPERTIES IMPORTED_LOCATION
+        ${CMAKE_SOURCE_DIR}/capstone/libs/libcapstone.a)
 
 
 add_library(${CMAKE_PROJECT_NAME} SHARED
@@ -43,4 +48,5 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
 # build script, prebuilt third-party libraries, or Android system libraries.
 target_link_libraries(${CMAKE_PROJECT_NAME}
         # List libraries link to the target library
+        capstone_lib
         log)
